--- a/views/deliveryOrder/info.ejs
+++ b/views/deliveryOrder/info.ejs
@@ -159,11 +159,11 @@
                             <div class="col">
                                 <select name="delivery_user" id="delivery_user" class="form-select form-select-sm">
                                     <option>請選擇</option>
-                                    <% for(i of user){ %>
-                                    <option value="<%= Object.values(i) %>"<% if(Object.values(i)==data.delivery_user){ %>selected <% } %>>
+                                    <% let j ; for(i of user){ %>
+                                    <option value="<%= Object.values(i) %>"<% if(Object.values(i)==data.delivery_user){ j='exsits'; %>selected <% } %>>
                                         <%= Object.values(i) %>
                                     </option>
-                                    <% } %>
+                                    <% } %><% if(j!='exsits'){ %><option name='delivery_user' value="<%= data.delivery_user %>" selected><%= data.delivery_user %></option> <% } %> 
                                 </select>
                             </div>
                         </div>
