update user header display

--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -28,7 +28,7 @@
                     <div class="col">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/">Home</a></li>
-                            <li class="breadcrumb-item"><a href="/user">User</a></li>
+                            <li class="breadcrumb-item"><a href="/user">User/Admin</a></li>
                             <li class="breadcrumb-item active" aria-current="page"><%= data._id? data.user_id : 'Craete User' %></li>
                         </ol>
                     </div>
