--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -24,7 +24,7 @@
                         <div class="col">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page"><%= datas[0].username %><%= datas[0].role==0?"Admin":"Users" %></li>
+                                <li class="breadcrumb-item active" aria-current="page"><%= type %></li>
                             </ol>
                         </div>
                         <div class="col">
