setting password maxlength=16

--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -63,7 +63,7 @@
                             <label for="password">Password:</label>
                         </div>
                         <div class="col">
-                            <input type="password" id="password" name="password" class="form-control" placeholder="password">
+                            <input type="password" id="password" name="password" class="form-control" placeholder="password" maxlength="16">
                         </div>
                     </div>
 
@@ -72,7 +72,7 @@
                             <label for="confirm_password">Confirm Password:</label>
                         </div>
                         <div class="col">
-                            <input type="password" id="confirm_password" name="confirm_password" class="form-control" placeholder="confirm password">
+                            <input type="password" id="confirm_password" name="confirm_password" class="form-control" placeholder="confirm password" maxlength="16">
                         </div>
                     </div>
 
