--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,10 +9,12 @@
     float: left;
     justify-content:space-between;
 }
+/* dark mode */
 .dark{
     background-color: black;
     color: white;
 }
+/* daytime mode */
 .white{
     background-color: white;
     color:black;
