--- a/views/stock/enquiry.ejs
+++ b/views/stock/enquiry.ejs
@@ -11,17 +11,19 @@
         <div class="row">
             <div class="col-2">
                 <div class="list-group list-group-flush text-center">
-                    <a href="/" class="list-group-item">Index</a>
-                    <a href="/productlist" class="list-group-item">Products</a>
-                    <a href="/stock" class="list-group-item">Stocks</a>
-                    <a href="/deliveryOrder" class="list-group-item">Delivery Orders</a>
-                    <a href="/user" class="list-group-item">Users</a>
-                    <button type="submit" form="logout" class="list-group-item">Logout</button>
+                    <a href="/" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Index</a>
+                    <a href="/productlist" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Products</a>
+                    <a href="/stock" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Stocks</a>
+                    <a href="/deliveryOrder" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Delivery Orders</a>
+                    <a href="/user" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Users</a>
+                    <button type="submit" form="logout" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Logout</button>
+                    <a href="/recycleBin" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Recycle Bin</a>
+                    <a href="/darkmode" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">change background</a>
                 </div> 
                 
                 <form action="/user/logout" method="post" id="logout">
                 </form> 
-            </div>
+              </div>
     
             <div class="col-10">
                 <div class="row my-1">
