--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -2,6 +2,7 @@
     <head>
         <title>Warehouse In Out system</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <div class="container">
@@ -15,18 +16,18 @@
                         <a href="/user" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Users</a>
                         <button type="submit" form="logout" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Logout</button>
                         <a href="/recycleBin" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Recycle Bin</a>
-                        <a href="/darkmode" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">change background</a>
+                        <a href="/darkmode" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>"><%= darkmode=='dark'?'Daytime Mode':'Darkness Mode' %></a>
                     </div> 
                     
                     <form action="/user/logout" method="post" id="logout">
                     </form> 
-                  </div>
+                </div>
                 <div class="col-10">
                     <div class="row my-1">
                         <div class="col">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Users</li>
+                                <li class="breadcrumb-item active" aria-current="page"><%= header %></li>
                             </ol>
                         </div>
                         <div class="col">
