--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,24 @@
     float: left;
     justify-content:space-between;
 }
+/* def var 可以透過JS只改這邊便可以改變各種變量*/
+:root{
+    --bg-color: white;
+    --link-color: black;
+    --hover-color: rgb(241, 241, 147);
+    --a-color: black;
+}
+a:hover, a:visited, a:link, a:active {
+    text-decoration: none;
+    
+    }
+/*懸空時變色*/
+.hover:hover{
+    background-color:var(--hover-color);
+}
+a{
+    color: var(--a-color);
+}
 /* dark mode */
 .dark{
     background-color: black;
@@ -16,6 +34,64 @@
 }
 /* daytime mode */
 .white{
-    background-color: white;
-    color:black;
+    background-color: var(--bg-color);
+    color:var(--link-color);
+}
+.v1{
+    background-color: #FFFFFF;
+}
+.v2{
+    background-color: #9C9C9C;
+
+}
+.switch-box {
+    width: 50px;
+    height: 20px;
+    top:10px;
+    background-color: rgb(230, 230, 230);
+    position: relative;
+    cursor: pointer;
+    /* 外觀 */
+    appearance: none;
+    border-radius: 30px;
+    transition: all 500ms;
+}
+
+.switch-box ::before {
+    width: 50px;
+    height: 20px;
+    background-color: rgb(230, 230, 230);
+    position: absolute;
+    cursor: pointer;
+    content: '';
+    border-radius: 30px;
+    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.switch-box::after {
+    position: absolute;
+    left: 4px;
+    top: 2px;
+    width: 20px;
+    height: 18px;
+    border-radius: 26px;
+    background-color: #fff;
+    box-shadow: 1px 1px 5px rgba(#000, .3);
+    content: '';
+    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+
+}
+
+.switch-box:checked {
+    background-color: darkcyan;
+}
+
+.switch-box:checked::after {
+    transform: translateX(20px);
+
+}
+
+.switch-box:checked::before {
+    transform: scale(0);
+
 }
