--- a/views/productList/index.ejs
+++ b/views/productList/index.ejs
@@ -8,22 +8,24 @@
            let middle ;
            %>
         <title>Warehouse In Out system</title>
+        <script type="text/javascript" src="../js/css.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <link href="../css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body>
+    <body class="v1">
+        <input class="switch-box" type="checkbox" id="btn" >
         <div class="container">
             <div class="row">
                 <div class="col-2">
                     <div class="list-group list-group-flush text-center">
-                        <a href="/" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Index</a>
+                        <a href="/" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>" >Index</a>
                         <a href="/productlist" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Products</a>
                         <a href="/stock" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Stocks</a>
                         <a href="/deliveryOrder" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Delivery Orders</a>
                         <a href="/user" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Users</a>
                         <button type="submit" form="logout" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Logout</button>
                         <a href="/recycleBin" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Recycle Bin</a>
-                        <a href="/darkmode" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>"><%= darkmode=='dark'?'Daytime Mode':'Darkness Mode' %></a>
+                        <a href="/darkmode" class="list-group-item white"><%= darkmode=='dark'?'Daytime Mode':'Darkness Mode' %></a>
                     </div> 
                     
                     <form action="/user/logout" method="post" id="logout">
@@ -47,7 +49,7 @@
                             <a href='/productlist/sort?sort=Product_id&seq=<%= sort==="Product_id"?-1:1 %>'>貨品編號</a>
                         </div>
                         <div class="col fw-bold fs-5">
-                            <a href='/productlist/sort?sort=Type&seq=<%= sort==="Type"?-1:1 %>'>類型</a>
+                            <a href='/productlist/<% if(sub){ %>title<% ;}else{ %>sort<% ;} %>?sort=Type&seq=<%= sort==="Type"?-1:1 %><% if(sub){ %>&title=<%= data[0].Type %><% } %>'>類型</a>
                         </div>
                         <div class="col fw-bold fs-5">
                             <a href='/productlist/sort?sort=Brand&seq=<%= sort==="Brand"?-1:1 %>'>品牌</a>
@@ -72,27 +74,27 @@
                         </div>                  
                     </div>
                     <% for(x in data){ %>
-                        <div class="row py-2 border-bottom border-dark">
+                        <div class="row py-2 border-bottom border-dark hover">
                             <div class="col">
                                 <a href='/product/info?call_info=<%= data[x].Product_id %>'><%= data[x].Product_id %></a>
                             </div>
                             <div class="col">
-                                <a href='/productlist/title?title=<%= data[x].Type %>'><%= data[x].Type %></a>
+                                <a href='/productlist/title?sort=Type&title=<%= data[x].Type %>&seq=<%= sort==="Type"?-1:1 %>'><%= data[x].Type %></a>
                             </div>
                             <div class="col">
-                                <a href='/productlist/title?title=<%= data[x].Brand %>'><%= data[x].Brand %></a>
+                                <a href='/productlist/title?sort=Brand&title=<%= data[x].Brand %>&seq=<%= sort==="Brand"?-1:1 %>'><%= data[x].Brand %></a>
                             </div>
                             <div class="col">
-                                <a href='/productlist/title?title=<%= data[x].Name %>'><%= data[x].Name %></a>
+                                <a href='/productlist/title?sort=Name&title=<%= data[x].Name %>&seq=<%= sort==="Name"?-1:1 %>'><%= data[x].Name %></a>
                             </div>
                             <div class="col">
-                                <a href='/productlist/title?title=<%= data[x].Origin %>'><%= data[x].Origin %></a>
+                                <a href='/productlist/title?sort=Origin&title=<%= data[x].Origin %>&seq=<%= sort==="Origin"?-1:1 %>'><%= data[x].Origin %></a>
                             </div>
                             <div class="col">
-                                <a href='/productlist/title?title=<%= data[x].Count %>'><%= data[x].Count %></a>
+                                <a href='/productlist/title?sort=Type&title=<%= data[x].Count %>&seq=<%= sort==="Count"?-1:1 %>'><%= data[x].Count %></a>
                             </div>
                             <div class="col">
-                                <a href='/productlist/title?title=<%= data[x].trans_stock_id[0].name %>'><%= data[x].trans_stock_id[0].name %></a>
+                                <a href='/productlist/title?sort=stock_id&title=<%= data[x].stock_id %>'><%= data[x].trans_stock_id[0].name %></a>
                             </div>
                             <div class="col">
                                 <%
