--- a/views/productList/index.ejs
+++ b/views/productList/index.ejs
@@ -8,9 +8,14 @@
            let middle ;
            %>
         <title>Warehouse In Out system</title>
-        <script type="text/javascript" src="../js/css.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="../css/style.css" rel="stylesheet" type="text/css">
+        <script type="module">
+            import { btn } from '/js/script.js';
+            document.addEventListener("DOMContentLoaded", function () {
+                btn();
+            })
+        </script>
     </head>
     <body class="v1">
         <input class="switch-box" type="checkbox" id="btn" >
