--- a/views/productList/index.ejs
+++ b/views/productList/index.ejs
@@ -23,13 +23,13 @@
             <div class="row">
                 <div class="col-2">
                     <div class="list-group list-group-flush text-center">
-                        <a href="/" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>" >Index</a>
-                        <a href="/productlist" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Products</a>
-                        <a href="/stock" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Stocks</a>
-                        <a href="/deliveryOrder" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Delivery Orders</a>
-                        <a href="/user" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Users</a>
-                        <button type="submit" form="logout" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Logout</button>
-                        <a href="/recycleBin" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Recycle Bin</a>
+                        <a href="/" class="list-group-item white" >Index</a>
+                        <a href="/productlist" class="list-group-item white">Products</a>
+                        <a href="/stock" class="list-group-item white">Stocks</a>
+                        <a href="/deliveryOrder" class="list-group-item white">Delivery Orders</a>
+                        <a href="/user" class="list-group-item white">Users</a>
+                        <button type="submit" form="logout" class="list-group-item white">Logout</button>
+                        <a href="/recycleBin" class="list-group-item white">Recycle Bin</a>
                         <a href="/darkmode" class="list-group-item white"><%= darkmode=='dark'?'Daytime Mode':'Darkness Mode' %></a>
                     </div> 
                     
