frontend ver dark mode

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,13 +29,13 @@ a{
 }
 /* dark mode */
 .dark{
-    background-color: black;
-    color: white;
+    background-color: black !important;
+    color: white !important;
 }
 /* daytime mode */
 .white{
-    background-color: var(--bg-color);
-    color:var(--link-color);
+    background-color: var(--bg-color) !important;
+    color:var(--link-color) !important;
 }
 .v1{
     background-color: #FFFFFF;
