--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,57 @@
     <title>Warehouse In Out system</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="../css/style.css" rel="stylesheet" type="text/css">
+    <script>
+      function setClass(name,setClass,removeClass,getBy){
+        switch(getBy){
+          case "id":
+            for(let list of document.getElementById(name)){
+              list.classList.remove(removeClass);
+              list.classList.add(setClass);
+            }
+            break;
+          case "class":
+            for(let list of document.getElementsByClassName(name)){
+              list.classList.remove(removeClass);
+              list.classList.add(setClass);
+            }
+            break;
+          case "tag":
+            for(list of document.getElementsByTagName(name)){
+              list.classList.remove(removeClass);
+              list.classList.add(setClass);
+            };
+            break;
+        }
+      }
+
+      function setDarkMode(){
+        if(sessionStorage.getItem("darkmode")=="dark"){
+          setClass("body","dark","white","tag");
+          setClass("list-group-item","dark","white","class");
+          setClass("breadcrumb-item","dark","white","class");
+        }else{
+          setClass("body","white","dark","tag");
+          setClass("list-group-item","white","dark","class");
+          setClass("breadcrumb-item","white","dark","class");
+        }
+      }
+
+      function changeDarkMode(){
+        if(sessionStorage.getItem("darkmode")=="dark"){
+          sessionStorage.setItem("darkmode","white");
+        }else{
+          sessionStorage.setItem("darkmode","dark");
+        }
+      }
+
+      function darkMode(){
+        changeDarkMode();
+        setDarkMode();
+      }
+
+      setDarkMode();
+    </script>
   </head>
   <body>
     <div class="container">
@@ -18,6 +69,7 @@
               <button type="submit" form="logout" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Logout</button>
               <a href="/recycleBin" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>">Recycle Bin</a>
               <a href="/darkmode" class="list-group-item <%= darkmode=='dark'?'dark':'white' %>"><%= darkmode=='dark'?'Daytime Mode':'Darkness Mode' %></a>
+              <label class="test" onclick="darkMode()">test button</label>
           </div> 
           
           <form action="/user/logout" method="post" id="logout">
