--- a/views/productList/index.ejs
+++ b/views/productList/index.ejs
@@ -16,6 +16,7 @@
                 btn();
             })
         </script>
+        <script src="../js/darkMode.js"></script>
     </head>
     <body class="v1">
         <input class="switch-box" type="checkbox" id="btn" >
