--- a/views/productList/index.ejs
+++ b/views/productList/index.ejs
@@ -30,7 +30,6 @@
                         <a href="/user" class="list-group-item white">Users</a>
                         <button type="submit" form="logout" class="list-group-item white">Logout</button>
                         <a href="/recycleBin" class="list-group-item white">Recycle Bin</a>
-                        <a href="/darkmode" class="list-group-item white"><%= darkmode=='dark'?'Daytime Mode':'Darkness Mode' %></a>
                     </div> 
                     
                     <form action="/user/logout" method="post" id="logout">
@@ -54,7 +53,7 @@
                             <a href='/productlist/sort?sort=Product_id&seq=<%= sort==="Product_id"?-1:1 %>'>貨品編號</a>
                         </div>
                         <div class="col fw-bold fs-5">
-                            <a href='/productlist/<% if(sub){ %>title<% ;}else{ %>sort<% ;} %>?sort=Type&seq=<%= sort==="Type"?-1:1 %><% if(sub){ %>&title=<%= data[0].Type %><% } %>'>類型</a>
+                            <a href='/productlist/sort?sort=Type&seq=<%= sort==="Type"?-1:1 %>'>類型</a>
                         </div>
                         <div class="col fw-bold fs-5">
                             <a href='/productlist/sort?sort=Brand&seq=<%= sort==="Brand"?-1:1 %>'>品牌</a>
@@ -96,7 +95,7 @@
                                 <a href='/productlist/title?sort=Origin&title=<%= data[x].Origin %>&seq=<%= sort==="Origin"?-1:1 %>'><%= data[x].Origin %></a>
                             </div>
                             <div class="col">
-                                <a href='/productlist/title?sort=Type&title=<%= data[x].Count %>&seq=<%= sort==="Count"?-1:1 %>'><%= data[x].Count %></a>
+                                <a href='/productlist/check?sort=Type&match=<%= data[x].Product_id %>'><%= data[x].Count %></a>
                             </div>
                             <div class="col">
                                 <a href='/productlist/title?sort=stock_id&title=<%= data[x].stock_id %>'><%= data[x].trans_stock_id[0].name %></a>
