--- a/views/product/info.ejs
+++ b/views/product/info.ejs
@@ -96,8 +96,8 @@
       </table>
     </form>
       
-    <a href="/products">Back to stock List</a></br>
-    <a href="/products">Back to Index</a></br>
+    <a href="/productslist">Back to ProductList</a></br>
+   
      
     
   </body>
