default load setting dark mode style

--- a/views/product/index.ejs
+++ b/views/product/index.ejs
@@ -15,7 +15,7 @@
     </script>
 </head>
 
-<body>
+<body class="darkmode">
     <div class="container">
         <input class="switch-box" type="checkbox" id="btn">
         <div class="row">
@@ -119,4 +119,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 
+  <script>
+    document.addEventListener('load', setDarkMode());
+  </script>  
 </html>
