--- a/views/product/info.ejs
+++ b/views/product/info.ejs
@@ -8,7 +8,7 @@
       <script src="../js/darkMode.js"></script>
       <title>Warehouse In Out system</title>
   </head>
-  <body>
+  <body class="darkmode">
     <h1>4角有限公司</h1>
       
     <form action="/product/save" method="post">
@@ -104,4 +104,7 @@
     
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script>
+    document.addEventListener('load', setDarkMode());
+  </script>  
 </html>
