--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
               <a href="/user" class="list-group-item darkmode">Users</a>
               <button type="submit" form="logout" class="list-group-item darkmode">Logout</button>
               <a href="/recycleBin" class="list-group-item darkmode">Recycle Bin</a>
-              <label class="list-group-item darkmode" onclick="darkMode(this)">Daytime Mode</label>
+              <label class="list-group-item darkmode" onclick="darkMode(this)">Dark Mode</label>
           </div> 
           
           <form action="/user/logout" method="post" id="logout">
@@ -99,5 +99,8 @@
       </div>
     </div>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
+  <script>
+    document.addEventListener('load', setDarkMode());
+  </script>  
 </html>
