--- a/views/recycleBin/index.ejs
+++ b/views/recycleBin/index.ejs
@@ -6,19 +6,19 @@
     <link href="../css/style.css" rel="stylesheet" type="text/css">
     <script src="../js/darkMode.js"></script>
   </head>
-  <body>
+  <body class="darkmode">
     <div class="container">
       <div class="row">
         <div class="col-2">
           <div class="list-group list-group-flush text-center">
-              <a href="/" class="list-group-item darkmode">Index</a>
-              <a href="/productlist" class="list-group-item darkmode">Products</a>
-              <a href="/stock" class="list-group-item darkmode">Stocks</a>
-              <a href="/deliveryOrder" class="list-group-item darkmode">Delivery Orders</a>
-              <a href="/user" class="list-group-item darkmode">Users</a>
-              <button type="submit" form="logout" class="list-group-item darkmode">Logout</button>
-              <a href="/recycleBin" class="list-group-item darkmode">Recycle Bin</a>
-              <label class="list-group-item darkmode" onclick="darkMode(this)">Daytime Mode</label>
+            <a href="/" class="list-group-item darkmode">Index</a>
+            <a href="/productlist" class="list-group-item darkmode">Products</a>
+            <a href="/stock" class="list-group-item darkmode">Stocks</a>
+            <a href="/deliveryOrder" class="list-group-item darkmode">Delivery Orders</a>
+            <a href="/user" class="list-group-item darkmode">Users</a>
+            <button type="submit" form="logout" class="list-group-item darkmode">Logout</button>
+            <a href="/recycleBin" class="list-group-item darkmode">Recycle Bin</a>
+            <label class="list-group-item darkmode" onclick="darkMode(this)">Dark Mode</label>
           </div> 
           
           <form action="/user/logout" method="post" id="logout">
@@ -108,4 +108,7 @@
     </div>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script>
+    document.addEventListener('load', setDarkMode());
+  </script>  
 </html>
