--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -4,8 +4,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link href="../css/style.css" rel="stylesheet" type="text/css">
         <script src="../js/darkMode.js"></script>
+        
     </head>
-    <body>
+    <body class="darkmode">
         <div class="container">
             <div class="row">
                 <div class="col-2">
@@ -17,7 +18,7 @@
                         <a href="/user" class="list-group-item darkmode">Users</a>
                         <button type="submit" form="logout" class="list-group-item darkmode">Logout</button>
                         <a href="/recycleBin" class="list-group-item darkmode">Recycle Bin</a>
-                        <label class="list-group-item darkmode" onclick="darkMode(this)">Daytime Mode</label>
+                        <label class="list-group-item darkmode" onclick="darkMode(this)">Dark Mode</label>
                     </div> 
                     
                     <form action="/user/logout" method="post" id="logout">
@@ -27,9 +28,9 @@
                 <div class="col-10">
                     <div class="row my-1">
                         <div class="col">
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="/">Home</a></li>
-                                <li class="breadcrumb-item active" aria-current="page"><%= header %></li>
+                            <ol class="breadcrumb darkmode">
+                                <li class="breadcrumb-item"><a href="/" class="darkmode">Home</a></li>
+                                <li class="breadcrumb-item active darkmode" aria-current="page"><%= header %></li>
                             </ol>
                         </div>
                         <div class="col">
@@ -73,7 +74,7 @@
                         </form>
                     </div>
 
-                    <div class="row my-1 border-bottom border-dark bg-secondary-subtle">
+                    <div class="row my-1 border-bottom border-primary bg-primary-subtle text-black">
                         <div class="col-3 fw-bold fs-5 text-center">
                             user Id
                         </div>
@@ -115,8 +116,9 @@
                 </div>
             </div>
         </div>
-        
-           
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+      document.addEventListener('load', setDarkMode());
+    </script>  
 </html>
