--- a/views/user/info.ejs
+++ b/views/user/info.ejs
@@ -1,124 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Warehouse In Out system</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Warehouse In Out system</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="../css/style.css" rel="stylesheet" type="text/css">
-    <script src="../js/darkMode.js"></script>
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-2">
-                <div class="list-group list-group-flush text-center">
-                    <a href="/" class="list-group-item darkmode">Index</a>
-                    <a href="/productlist" class="list-group-item darkmode">Products</a>
-                    <a href="/stock" class="list-group-item darkmode">Stocks</a>
-                    <a href="/deliveryOrder" class="list-group-item darkmode">Delivery Orders</a>
-                    <a href="/user" class="list-group-item darkmode">Users</a>
-                    <button type="submit" form="logout" class="list-group-item darkmode">Logout</button>
-                    <a href="/recycleBin" class="list-group-item darkmode">Recycle Bin</a>
-                    <label class="list-group-item darkmode" onclick="darkMode(this)">Daytime Mode</label>
-                </div> 
-                
-                <form action="/user/logout" method="post" id="logout">
-                </form> 
-            </div>
-            
-            <div class="col-10">
-                <div class="row my-1">
-                    <div class="col">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
-                            <li class="breadcrumb-item"><a href="/user">User/Admin</a></li>
-                            <li class="breadcrumb-item active" aria-current="page"><%= data._id? data.user_id : 'Craete User' %></li>
-                        </ol>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <label class="h1"><%= data._id?"User information": "Create User" %></label>
-                </div>
-
-                <form action="/user/save" method="post">
-                    <input type="text" name="id" value="<%= data._id %>" hidden />
-                    <div class="row my-1">
-                        <div class="col">
-                            <label for="user_id">User Id:</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="user_id" name="user_id" class="form-control" value="<%= data.user_id %>" placeholder="user Id">
-                        </div>
-                    </div>
-
-                    <div class="row my-1">
-                        <div class="col">
-                            <label for="username">Username:</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="username" name="username" class="form-control" value="<%= data.username %>" placeholder="username">
-                        </div>
-                    </div>
-
-                    <div class="row my-1">
-                        <div class="col">
-                            <label for="password">Password:</label>
-                        </div>
-                        <div class="col">
-                            <input type="password" id="password" name="password" class="form-control" placeholder="password" maxlength="16">
-                        </div>
-                    </div>
-
-                    <div class="row my-1">
-                        <div class="col">
-                            <label for="confirm_password">Confirm Password:</label>
-                        </div>
-                        <div class="col">
-                            <input type="password" id="confirm_password" name="confirm_password" class="form-control" placeholder="confirm password" maxlength="16">
-                        </div>
-                    </div>
-
-                    <div class="row my-1">
-                        <div class="col">
-                            <label for="name">Name:</label>
-                        </div>
-                        <div class="col">
-                            <input type="text" id="name" name="name" class="form-control" value="<%= data.name %>" placeholder="name">
-                        </div>
-                    </div>
-
-                    <div class="row my-1">
-                        <div class="col">
-                            <label>Role:</label>
-                        </div>
-                        <div class="col">
-                            <% for(let role of roles){ %>
-                                <div class="form-check">
-                                    <input type="radio" id="<%=role.display_name %>" name="role" value="<%= role.value %>" class="form-check-input" <%= role.value==data.role? "checked": "" %> >
-                                    <label for="<%= role.display_name %>" class="form-check-label"><%= role.display_name %></label>
-                                </div>
-                            <% } %>
-                        </div>
-                    </div>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="../css/style.css" rel="stylesheet" type="text/css">
+        <script src="../js/darkMode.js"></script>
+    </head>
+    <body class="darkmode">
+        <div class="container">
+            <div class="row">
+                <div class="col-2">
+                    <div class="list-group list-group-flush text-center">
+                        <a href="/" class="list-group-item darkmode">Index</a>
+                        <a href="/productlist" class="list-group-item darkmode">Products</a>
+                        <a href="/stock" class="list-group-item darkmode">Stocks</a>
+                        <a href="/deliveryOrder" class="list-group-item darkmode">Delivery Orders</a>
+                        <a href="/user" class="list-group-item darkmode">Users</a>
+                        <button type="submit" form="logout" class="list-group-item darkmode">Logout</button>
+                        <a href="/recycleBin" class="list-group-item darkmode">Recycle Bin</a>
+                        <label class="list-group-item darkmode" onclick="darkMode(this)">Dark Mode</label>
+                    </div> 
                     
-                    <div class="row">
-                        <label name="error" class="text-danger"><%= message %></label>
+                    <form action="/user/logout" method="post" id="logout">
+                    </form> 
+                </div>
+                
+                <div class="col-10">
+                    <div class="row my-1">
+                        <div class="col">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                                <li class="breadcrumb-item"><a href="/user">User/Admin</a></li>
+                                <li class="breadcrumb-item active" aria-current="page"><%= data._id? data.user_id : 'Craete User' %></li>
+                            </ol>
+                        </div>
                     </div>
-                    <input type="submit" value="<%= data._id? 'Update user' : 'Create User' %>" class="btn btn-primary my-1">
-                    <% if(data._id){ %>
-                        <button type="submit" form="delete" class="btn btn-warning">Delete</button>
-                    <% } %>
-                </form>
 
-                <form action="/user/delete" method="post" class="d-inline" id="delete">
-                    <input type="text" value="<%= data._id %>" name="user_id" hidden />  
-                </form>
+                    <div class="row">
+                        <label class="h1"><%= data._id?"User information": "Create User" %></label>
+                    </div>
+
+                    <form action="/user/save" method="post">
+                        <input type="text" name="id" value="<%= data._id %>" hidden />
+                        <div class="row my-1">
+                            <div class="col">
+                                <label for="user_id">User Id:</label>
+                            </div>
+                            <div class="col">
+                                <input type="text" id="user_id" name="user_id" class="form-control" value="<%= data.user_id %>" placeholder="user Id">
+                            </div>
+                        </div>
+
+                        <div class="row my-1">
+                            <div class="col">
+                                <label for="username">Username:</label>
+                            </div>
+                            <div class="col">
+                                <input type="text" id="username" name="username" class="form-control" value="<%= data.username %>" placeholder="username">
+                            </div>
+                        </div>
+
+                        <div class="row my-1">
+                            <div class="col">
+                                <label for="password">Password:</label>
+                            </div>
+                            <div class="col">
+                                <input type="password" id="password" name="password" class="form-control" placeholder="password" maxlength="16">
+                            </div>
+                        </div>
+
+                        <div class="row my-1">
+                            <div class="col">
+                                <label for="confirm_password">Confirm Password:</label>
+                            </div>
+                            <div class="col">
+                                <input type="password" id="confirm_password" name="confirm_password" class="form-control" placeholder="confirm password" maxlength="16">
+                            </div>
+                        </div>
+
+                        <div class="row my-1">
+                            <div class="col">
+                                <label for="name">Name:</label>
+                            </div>
+                            <div class="col">
+                                <input type="text" id="name" name="name" class="form-control" value="<%= data.name %>" placeholder="name">
+                            </div>
+                        </div>
+
+                        <div class="row my-1">
+                            <div class="col">
+                                <label>Role:</label>
+                            </div>
+                            <div class="col">
+                                <% for(let role of roles){ %>
+                                    <div class="form-check">
+                                        <input type="radio" id="<%=role.display_name %>" name="role" value="<%= role.value %>" class="form-check-input" <%= role.value==data.role? "checked": "" %> >
+                                        <label for="<%= role.display_name %>" class="form-check-label"><%= role.display_name %></label>
+                                    </div>
+                                <% } %>
+                            </div>
+                        </div>
+                        
+                        <div class="row">
+                            <label name="error" class="text-danger"><%= message %></label>
+                        </div>
+                        <input type="submit" value="<%= data._id? 'Update user' : 'Create User' %>" class="btn btn-primary my-1">
+                        <% if(data._id){ %>
+                            <button type="submit" form="delete" class="btn btn-warning">Delete</button>
+                        <% } %>
+                    </form>
+
+                    <form action="/user/delete" method="post" class="d-inline" id="delete">
+                        <input type="text" value="<%= data._id %>" name="user_id" hidden />  
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('load', setDarkMode());
+    </script>  
 </html>
